--- a/demo-app-VISION-TRACK/package.json
+++ b/demo-app-VISION-TRACK/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "medical-triage-ai-vision",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
+    "build:lovable": "vite build --mode production",
     "preview": "vite preview",
+    "lint": "eslint .",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage",
-    "test:ci": "vitest --run --coverage"
+    "test:ci": "vitest --run --coverage",
+    "deploy:lovable": "npm run build:lovable && lovable deploy",
+    "start:lovable": "lovable start",
+    "tag:components": "lovable tag-components"
   },
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^2.1.1",
